"Criação da pagina home"

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto do https://curso.dev para implementação de uma aplicação em todos os processos, clone do projeto https://www.tabnews.com.br",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "author": "",
   "license": "MIT",
